Fixed qr download issue on mobile. added jpg format.  minor css changes

--- a/styles/general.css
+++ b/styles/general.css
@@ -18,6 +18,10 @@ body {
     min-height: 100vh;
 }
 
+main {
+    max-width: 100%;
+}
+
 header {
     width: 100%;
     display: flex;
