--- a/styles/scan.css
+++ b/styles/scan.css
@@ -22,6 +22,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-width: 100%;
 }
 
 #qr-reader select {
